# telprefix

./: README.md  pyproject.toml  test.py
telprefix/: __init__.py  path.py  result.json  scrap.py  telprefix.py
