[tool.poetry]
name = "telprefix"
version = "0.1.0"
description = "Simple scripts to retrieve and find Indonesia's phone numbers prefixes"
authors = ["Hendra Manudinata <manoedinata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
